syntax = "proto3";

option csharp_namespace = "GrpcBasket";

package BasketApi;

service Basket {
	rpc GetBasketById(BasketRequest) returns (StudentBasketResponse) {}
	rpc UpdateBasket(StudentBasketRequest) returns (StudentBasketResponse) {}
}

message BasketRequest {
	string id = 1;
}

message StudentBasketRequest {
	string studentid = 1;
	repeated BasketItemResponse items = 2;
}

message StudentBasketResponse {
	string studentid = 1;
	repeated BasketItemResponse items = 2;
}

message BasketItemResponse {
	string id = 1;
	int32 scholarshipitemid = 2;
	string scholarshipItemname = 3;
	double slotamount = 4;
	double oldslotamount = 5;
	int32 slots = 6;
	string pictureurl = 7;
}
